<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_app">About the app</string>
    <string name="about_message">This software uses map data provided by OpenStreetMap.org</string>
    <string name="account_deletion_confirm_dialog_description">It’ll take 10 days. We’ll remove:\n— personal data\n— saved addresses\n— order history\n— personal offers\n— your dodocoins</string>
    <string name="account_deletion_confirm_dialog_negative_button">Cancel</string>
    <string name="account_deletion_confirm_dialog_positive_button">Delete</string>
    <string name="account_deletion_confirm_dialog_title">Delete your profile?</string>
    <string name="action_applied">Activated</string>
    <string name="action_apply">Apply</string>
    <string name="action_apply_promoaction">Apply promo action</string>
    <string name="action_apply_promocode">Apply promo code</string>
    <string name="action_goto">Go to</string>
    <string name="action_goto_menu_not_found">This product was not found in menu</string>
    <string name="action_soon">Soon</string>
    <string name="action_watch">Watch</string>
    <string name="active_promoaction">Action is active</string>
    <string name="active_promocode">Code %1$s is active</string>
    <string name="add_comment_and_photos">Comment and add photos</string>
    <string name="add_new_address">Add</string>
    <string name="add_new_address_failed_label">Delivery address could not be added, please try again</string>
    <string name="add_to_cart_button">Add to basket</string>
    <string name="add_to_cart_button_title">Add to basket for %s</string>
    <string name="add_toppings_label">Add to taste</string>
    <string name="added_toppings_label">+ %s</string>
    <string name="address_catcher_headline">�� We don’t deliver here yet</string>
    <string name="address_catcher_message">But we can send you push notification and SMS when we start and give a free pizza with your first order on this address</string>
    <string name="address_confirm_button">Yes, that’s right</string>
    <string name="address_delivery_incomplete">Please select address from the suggestions</string>
    <string name="address_delivery_incomplete_2">Add the address or choose from the suggested</string>
    <string name="address_delivery_stop">The address is temporarily unavailable for delivery</string>
    <string name="address_delivery_stop_2">Temporarily issues with delivering orders — we are working on it</string>
    <string name="address_determining_error">Can’t determine this location</string>
    <string name="address_empty">No addresses</string>
    <string name="address_is_not_deliverable">We don’t deliver to you yet, but we’re coming soon!</string>
    <string name="address_name">Address name</string>
    <string name="address_update_subscription_success_headline">�� Deal</string>
    <string name="address_update_subscription_success_message">We’ll let you know when we open nearby. In the meantime, you can order for pickup — just in case you’re around</string>
    <string name="addresses_invalid_address">We are not delivering here yet, choose another address</string>
    <string name="addresses_loading_failed">Cannot load address list</string>
    <string name="agc_02CAC09AC82718922B7A47188A3EF7CB928CA8D0EBE456FE3A763223DC25E33E">0007E2FEA330AC12ED73DC79572D63E9A243504ED6AF3B22CC2E9F37F8E33DE0706D51CF7C630695E39539ADB84306D40A29724061E6643901F2B93388AA83A224</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">00331AA00654428AB93282E59E225BA38DB91F18CA6DAD3927B372AFDD9CB4AACA032AC9B5337919CAE3C0D61E1F462719C86ED0CDD0F3520C300B01834F77653FDED30F27075314C32EEE690AE79825EF</string>
    <string name="agc_0692DAD5D21427E7CCE627E8DC1ED71FDB307EBDC4DFB3A554BC60FCCE38E034">0050C1D4B49BC52C0A4E7CF02BB64A99430FBA60344250CA4C216BAF95EC7D64B1371D7748E2786A91FAA5F57962D1AB7585E87F73A2A074188144EA85C3B031DB</string>
    <string name="agc_0DC3A56C1AC03D404A409264B0AED075A38F9EB082F5057704EA33D4B5B9B9C9">0089A96BD72DC527999215F94BEB3E5A35A57B76C3EE07F7E555188F2239A06EA1A52B100598A00E2B35F99EFA4B08B7F9136325AA5CC2B5DE2613F341A657AAA37CC2BE851BFC458E54D99AE84812A9C144922CF90F82D4BC5CE3FE48CDFF0BBA</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">002ED1E0E6405C5DCBF56D478F0770785B75BAD43954BCD2CC6FF4EF5B14CB95CB88A991996ED612C5E5ED1BE21D02D9609BDDD90A33330676F1F46CD5C95ECAE4599C0F3C13594E8736338C1F4FAB14DAA548EE163DE511B4791B2E45B1DD0923</string>
    <string name="agc_1DAF2070F644F3B6CEA88178D5DA98CE4A7A380B545F415B1A228519B1E134C8">005344B607312DED06D8CC57A708C38755A9FADC81B5C7D86FB0DCD8BDB32A2701C83DF7072D289DAFEE18B400AF3528FE</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">8B745C39026C81DB512247BD004E7CCD</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">006BFD78A0EC156742E625856B62017C761B9FC4371E3E26C9386E73EAAD813369</string>
    <string name="agc_346F273384FE025F17324187A93E7E3BFB08DD081290E00F942EE066625A31DD">00DCE4A734F548C5A2642AC0748C69C77023869BAFEA5549A184EEA4FB51B13BA098FD51AE51F9036A00EEF30DBED6C845</string>
    <string name="agc_35623988AD86DCDA34F1257D6E93F34177702C6302115D897E60D38E0816CD35">00892713C567A8D597A8C08E70D2703E1D2638F81D698B6904C77D226592D5BA8543B0DC57085F1D296DC83A8C3DB4C803</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">00FC2E8781D7DD2F1A10BA3B90E90A783C77CED02FBCE2BC55CD77B534B3922AA89FC7613B0C9B85E654ADE9D4FFF70220</string>
    <string name="agc_3D7A0A63AA0374539D58FF4B3034CF00D2353E3A780A0F85C35566E329358934">00886F4CC04CE2EC02AB5DDAD7C53B17450BE7AB4C9CB285A277053A1450C862E3159676B4057FFBCE6F7894B88C292B13D952EC6C5501574E2D27C831C76D1BED78370D707CF65E8D7F20C5A11A424AE965631C0F8D25438FEF3AB7BE13DE127C</string>
    <string name="agc_3FC6CD8093B4922272D7E36E11F6576A13C3767B8DFE7E7C806E0B096B233E18">00BBF173BA09503E0663D4696C0610F66160B0BFA177DA481D08C167298D03EAE53E4C5BD083446D156C0827DF8B75DB46</string>
    <string name="agc_42CFA4FE0F87541B3B3F9793F5D829BE381703BB99853CCC25D018996F251536">009811D5810FCA0A7ED8CBF4BD98346ECD0C117EDE096A915658EB3C65336FEA6B</string>
    <string name="agc_432BA784B7D2E3A6C73AB69659D3300DC6258E318543A10B50EA4B770C67DAB3">00CAAF49506B878218FD5F0DBB29C1598FAD8D654D133AEAF6DC71ED2935D164D1F43094903F7130004FD3B6D8852F70723699B86C9E3C372F3B882233F347CFD3</string>
    <string name="agc_4A1001369614B0D938752C6AB4967DE352A3ADD13CAE741A7DF78EE728F74136">001DC1EC2925C5E4AA927D7AF144A1BFF06C1ACD5E5B7F5F69631AA349C79B3479</string>
    <string name="agc_4D79CE1E9E81D44FFC3CBFEC80D073F18409AAC96E2DAFB11951005E99B02EDB">001B9ED53CE9BE1B99FA7963C33ADFC86596B1A1ED5F9464181A29BA7589D55EE17980B269C720FAA91308F331A56AF6BCEC604BE6D34841A6FB950F760D5AD229</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_not_available_error_title">Apparently, an issue occurred</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="cart_info">Your cart is empty – open the menu to get started.</string>
    <string name="cart_title_info">It\'s empty here</string>
    <string name="close">Close</string>
    <string name="delivery_addresses">Delivery addresses</string>
    <string name="done_button">Ok</string>
    <string name="ecc_camera">Camera</string>
    <string name="ecc_cancel">Cancel</string>
    <string name="ecc_file">File</string>
    <string name="ecc_find_photos">Find photos</string>
    <string name="ecc_gallery">Gallery</string>
    <string name="ecc_nothing_found">Nothing found</string>
    <string name="ecc_on_your_device">on your device</string>
    <string name="ecc_photos">Photographies</string>
    <string name="ecc_search_photos">Search photos…</string>
    <string name="ecc_send">Send</string>
    <string name="empty_delivery_addresses">The delivery addresses will be saved here.</string>
    <string name="energy_value">Calories</string>
    <string name="fats">Fats</string>
    <string name="five_stars_title">Great</string>
    <string name="four_stars_title">Good</string>
    <string name="nutritional_value">Nutrition facts (per 100 g)</string>
    <string name="one_star_title">Awful</string>
    <string name="open_menu">Go to menu</string>
    <string name="phone_number_out_of_service_error">Unfortunately, we can’t send OTP to phone numbers in your country</string>
    <string name="pref_debug_activate_close_mode">pref_debug_activate_close_mode</string>
    <string name="pref_debug_add_environment">pref_debug_add_environment</string>
    <string name="pref_debug_copy_firebase_installation_token">pref_debug_copy_firebase_installation_token</string>
    <string name="pref_debug_copy_push_token">pref_debug_copy_push_token</string>
    <string name="pref_debug_design_system">pref_debug_design_system</string>
    <string name="pref_debug_environments_group">pref_debug_environments_group</string>
    <string name="pref_debug_environments_list">pref_debug_environments_list</string>
    <string name="pref_debug_flipper_diagnostic">pref_debug_flipper_diagnostic</string>
    <string name="pref_debug_go_to_system_app_info">pref_debug_go_to_system_app_info</string>
    <string name="pref_debug_remove_environment">pref_debug_remove_environment</string>
    <string name="pref_debug_stuff_group">pref_debug_stuff_group</string>
    <string name="pref_debug_toggles">pref_debug_toggles</string>
    <string name="profile_address_list_empty_screen_title">Oops, it\'s empty here!</string>
    <string name="proteins">Protein</string>
    <string name="remove_ingredients_button_title">Remove ingredients</string>
    <string name="restore_default_ingredients_button_title">Reset recipe</string>
    <string name="three_stars_title">So so...</string>
    <string name="two_stars_title">Bad</string>
    <string name="weight">weight %1$s g.</string>
    <string name="weight_label">Weight</string>
</resources>