<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/auth_not_available" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:textAppearance="?attr/textAppearanceHeadingH2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginTop="21dp" android:layout_marginRight="24dp" android:layout_marginBottom="21dp" android:text="@string/auth_not_available_error_title"/>
    <TextView android:textAppearance="?attr/textAppearanceTextL" android:textColor="@color/textIconSecondaryColor" android:gravity="start" android:id="@+id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginRight="24dp" android:text="@string/phone_number_out_of_service_error"/>
    <TextView android:textSize="14sp" android:textColor="@color/textIconAccentColor" android:gravity="center" android:layout_gravity="end" android:id="@+id/close_button" android:background="?attr/selectableItemBackground" android:layout_width="wrap_content" android:layout_height="36dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/close" android:layout_marginEnd="24dp"/>
</LinearLayout>
