<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:id="@+id/activity_root" android:background="@android:color/black" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar" android:background="@color/ecc_chat_toolbar" android:layout_width="match_parent" android:layout_height="@dimen/ecc_toolbar_height" app:contentInsetStart="0dp">
        <ImageButton android:id="@+id/back_button" android:background="?android:attr/selectableItemBackground" android:layout_width="wrap_content" android:layout_height="match_parent" android:paddingStart="16dp" android:paddingEnd="16dp" app:srcCompat="0x7f08010b"/>
        <TextView android:textSize="@dimen/ecc_text_big" android:textColor="@android:color/white" android:gravity="center_vertical" android:id="@+id/title" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/ecc_photos" android:layout_marginEnd="@dimen/ecc_toolbar_height"/>
        <LinearLayout android:orientation="horizontal" android:id="@+id/search_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
            <im.threads.ui.widget.CustomFontEditText android:textSize="@dimen/ecc_text_big" android:textColor="@color/ecc_chat_toolbar_text" android:textColorHint="@color/ecc_chat_toolbar_hint" android:ellipsize="end" android:id="@+id/search_edit_text" android:background="@null" android:layout_width="0dp" android:layout_height="match_parent" android:hint="@string/ecc_search_photos" android:lines="1" android:layout_weight="0.85" android:inputType="text" android:imeOptions="actionSearch" android:paddingStart="12dp" android:paddingEnd="0dp"/>
            <ImageButton android:id="@+id/clear_search_button" android:background="@null" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.15" app:srcCompat="@drawable/ecc_ic_clear_gray_30dp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout android:id="@+id/search_label_layout" android:background="#282828" android:layout_width="match_parent" android:layout_height="50dp" android:layout_margin="@dimen/ecc_margin_quarter" android:layout_below="@+id/toolbar">
        <ImageButton android:id="@+id/search_photo" android:background="@android:color/transparent" android:layout_width="54dp" android:layout_height="match_parent" android:layout_alignParentStart="true" app:srcCompat="@drawable/ecc_ic_search_white_24dp"/>
        <im.threads.ui.widget.CustomFontTextView android:textColor="@android:color/white" android:id="@+id/search_photo_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ecc_margin_half" android:text="@string/ecc_find_photos" android:layout_alignParentTop="true" android:textAllCaps="true" android:layout_toEndOf="@+id/search_photo"/>
        <im.threads.ui.widget.CustomFontTextView android:textSize="12sp" android:textColor="#8b8b8b" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ecc_on_your_device" android:layout_below="@+id/search_photo_title" android:layout_toEndOf="@+id/search_photo"/>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/recycler" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/bottom_buttons" android:layout_below="@+id/search_label_layout"/>
    <im.threads.ui.widget.CustomFontTextView android:textSize="@dimen/ecc_text_big" android:textColor="#808080" android:gravity="center_vertical" android:id="@+id/nothing_found_label" android:paddingTop="84dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ecc_nothing_found" android:layout_alignParentTop="true" android:layout_alignParentBottom="true" android:layout_centerInParent="true"/>
    <FrameLayout android:id="@+id/bottom_buttons" android:background="#333333" android:visibility="gone" android:layout_width="match_parent" android:layout_height="54dp" android:layout_alignParentBottom="true">
        <im.threads.ui.widget.CustomFontButton android:layout_gravity="start" android:id="@+id/cancel" android:text="@string/ecc_cancel" style="@style/bottomButtonTransparent"/>
        <im.threads.ui.widget.CustomFontButton android:layout_gravity="end" android:id="@+id/send" android:text="@string/ecc_send" style="@style/bottomButtonTransparent"/>
    </FrameLayout>
</RelativeLayout>
