<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/backgroundPrimaryColor" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textAppearance="?attr/textAppearanceHeadingH2" android:id="@+id/remove_ingredients_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:text="@string/remove_ingredients_button_title" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <com.google.android.material.chip.ChipGroup android:id="@+id/ingredients_chip_group" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="16dp" android:layout_marginRight="16dp" android:layout_below="@+id/remove_ingredients_title" android:layout_centerHorizontal="true"/>
    <Button android:id="@+id/restore_defaults_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/restore_default_ingredients_button_title" android:layout_alignTop="@+id/save_customization_button" android:layout_marginEnd="8dp" android:layout_toStartOf="@+id/save_customization_button" style="@style/LinkButton"/>
    <Button android:id="@+id/save_customization_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/done_button" android:layout_below="@+id/ingredients_chip_group" android:layout_alignParentEnd="true" style="@style/LinkButton"/>
</RelativeLayout>
