<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:textAppearance="?attr/textAppearanceTextL" android:textStyle="bold" android:textColor="@color/staticWhiteColor" android:id="@+id/name" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView android:textAppearance="?attr/textAppearanceTextS" android:textColor="@color/staticWhiteColor" android:id="@+id/label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:text="@string/nutritional_value" android:layout_below="@+id/name"/>
    <TextView android:textAppearance="?attr/textAppearanceTextM" android:textColor="@color/staticWhiteColor" android:id="@+id/energy_value_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/energy_value" android:layout_below="@+id/label"/>
    <TextView android:textAppearance="?attr/textAppearanceTextM" android:textColor="@color/staticWhiteColor" android:id="@+id/proteins_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/proteins" android:layout_below="@+id/energy_value_label"/>
    <TextView android:textAppearance="?attr/textAppearanceTextM" android:textColor="@color/staticWhiteColor" android:id="@+id/fats_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/fats" android:layout_below="@+id/proteins_label"/>
    <TextView android:textAppearance="?attr/textAppearanceTextM" android:textColor="@color/staticWhiteColor" android:id="@+id/carbohydrates_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/carbohydrates" android:layout_below="@+id/fats_label"/>
    <TextView android:textAppearance="?attr/textAppearanceTextM" android:textColor="@color/staticWhiteColor" android:id="@+id/energy_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/energy_value" android:layout_below="@+id/label" android:layout_alignParentEnd="true"/>
    <TextView android:textAppearance="?attr/textAppearanceTextM" android:textColor="@color/staticWhiteColor" android:id="@+id/proteins_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_below="@+id/energy_value" android:layout_alignParentEnd="true"/>
    <TextView android:textAppearance="?attr/textAppearanceTextM" android:textColor="@color/staticWhiteColor" android:id="@+id/fats_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_below="@+id/proteins_value" android:layout_alignParentEnd="true"/>
    <TextView android:textAppearance="?attr/textAppearanceTextM" android:textColor="@color/staticWhiteColor" android:id="@+id/carbohydrates_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_below="@+id/fats_value" android:layout_alignParentEnd="true"/>
    <FrameLayout android:orientation="horizontal" android:id="@+id/weight_info" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_below="@+id/carbohydrates_value">
        <TextView android:textAppearance="?attr/textAppearanceTextM" android:textColor="@color/staticWhiteColor" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/weight_label"/>
        <TextView android:textAppearance="?attr/textAppearanceTextM" android:textColor="@color/staticWhiteColor" android:layout_gravity="end" android:id="@+id/weight_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/weight"/>
    </FrameLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/allergens_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_below="@+id/weight_info">
        <TextView android:textAppearance="?attr/textAppearanceTextM" android:textColor="@color/staticWhiteColor" android:id="@+id/allergens_value" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/nutritional_value"/>
        <TextView android:textAppearance="?attr/textAppearanceTextM" android:textColor="@color/staticWhiteColor" android:id="@+id/allergens_can_contain_value" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:text="@string/nutritional_value"/>
    </LinearLayout>
    <View android:id="@+id/separator" android:background="@color/white_a40" android:visibility="gone" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:layout_below="@+id/allergens_layout"/>
</RelativeLayout>
