<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="vertical" android:background="@color/backgroundPrimaryColor" android:paddingLeft="36dp" android:paddingRight="36dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:scaleType="fitCenter" android:adjustViewBounds="true" android:maxWidth="300dp" app:srcCompat="@drawable/cart_empty"/>
    <TextView android:textAppearance="?attr/textAppearanceHeadingH1" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/cart_title_info"/>
    <TextView android:textAppearance="?attr/textAppearanceTextM" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/cart_info"/>
    <FrameLayout android:id="@+id/personalization_feature_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp">
        <TextView android:textAppearance="?attr/textAppearanceTextM" android:layout_gravity="center_horizontal" android:id="@+id/empty_shopping_cart_minimal_price" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </FrameLayout>
    <Button android:id="@+id/empty_shopping_cart_open_menu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/open_menu" style="@style/PrimaryButton"/>
</LinearLayout>
